2002-10-20  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS docs/gnuplot.doc src/command.c src/command.h src/graph3d.c
	src/graph3d.h src/mouse.c src/plot2d.c src/plot3d.c src/pm3d.c
	src/pm3d.h src/save.c src/set.c src/show.c src/unset.c: New command
	'set view map': forces splot into a layout suitable for 2D maps. 
	New global variable: int splot_map. New routines splot_map_activate()
	and splot_map_deactivate().

2002-10-20  Ethan Merritt  <merritt@u.washington.edu>

        * src/gplt_x11.c: Fix crash if asked to draw rotated empty string.

2002-10-18  Shigeharu TAKENO  <shige@iee.niit.ac.jp

	* docs/gnuplot.doc, term/atariaes.trm, term/atarivdi.trm, term/be.trm,
	term/x11.trm: Fix a number of misprints.

2002-10-18  Don Taber  <dtaber@blackrat.risc.rockwell.com>

	* term/linux.trm(LINUX_setup): Make driver work with devfs.

2002-10-17  Harald Harders  <h.harders@tu-bs.de>

	* term/epslatex.trm: Surround the graph by \begingroup ... \endgroup so
	that 'unitlength' is not changed globally.

2002-10-12  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.cyg config/makefile.mgw config/makefile.os2:
 	Added HAVE_DIRENT_H.

2002-10-11  Harald Harders  <h.harders@tu-bs.de>

	* src/misc.c(recursivefullname): Fix.

2002-10-11  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* src/misc.c: Indentation, ansification.

	* term/post.trm: Fix typo.

2002-10-11  Harald Harders  <h.harders@tu-bs.de>

	* src/misc.c(recursivefullname), src/util.c(existdir),
	src/variable.c(fontpath_tbl): Fontpath fix for Windows.

2002-10-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Add one missing }.

2002-10-09  Johannes Zellner  <johannes@zellner.org>

	* term/cgm.trm: fixed bug #616167 "cgm color problem"

2002-10-09  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/win/plot.c(main) makefile.cyg makefile.mgw: Added --help and
	--version switches.

2002-10-09  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/set.c: Added missing #ifdef PM3D around declaration of 