@@ -1,3 +1,9 @@
+2002-09-21  Harald Harders  <h.harders@tu-bs.de>
+
+	* docs/psdoc/Makefile docs/psdoc/ps_fontfile_doc.tex: This patch
+	improves the documentation for ps type1 font embedding. A table
+	containing the most important LaTeX text fonts is added. 
+
 2002-10-20  Petr Mikulik  <mikulik@physics.muni.cz>
 
 	* NEWS docs/gnuplot.doc src/command.c src/command.h src/graph3d.c
@@ -1350,7 +1356,7 @@
 
 	* docs/titlepag.sty: Changes for the title page of gnuplot.tex: 
 	Show up-to-date gnuplot version (from the file VERSION) and the
-	last modification date (from the tag $Date: 2002/10/20 21:19:49 $).
+	last modification date (from the tag $Date: 2002/10/20 22:09:08 $).
 
 2002-03-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
